Modify index file

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
    nav p{font-size: small;
         text-align: justify;}
 
+    nav li{
+                font-size: small;
+                text-align: justify;}
+
     footer {
         min-height: 30px;
         background: #F7F7F7;
