Reload index file

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<style type="text/css">
 				
 				body {
-			        font: 18px Helvetica;
-			        background: #F1F1F1;
+			        font: 15px Helvetica;
+			        background: white;
 			    }
 				.row > div{
 			        margin-bottom: 5px;
@@ -46,7 +46,7 @@
 			        border:1px solid #cccccc;
 			        border-radius: 3pt;
 			        margin: 4px;
-        			padding: 5px;
+        			padding: 7px;
 			    }
 			    .sidebar{}
 			    .sidebar p{font-size: small;
