--- a/index.html
+++ b/index.html
@@ -81,7 +81,27 @@
 
 				.sidebar, .content{
 					min-height: 300px;
-						    }
+				}
+
+				footer .footer-copyright {
+				    display: block;
+				    width: 100%;
+				    text-align: left;
+				    margin-bottom: 10px;
+				}
+
+				footer .footer-copyright {
+				    
+				    font-family: "Gotham_SSm_4r",Helvetica,Arial,sans-serif;
+				    font-size: 12px;
+				    font-size: .75rem;
+				    line-height: 16px;
+				    line-height: 1rem;
+				    color: #586062;
+				    -webkit-font-smoothing: antialiased;
+				    margin-top: 5px;
+				    vertical-align: top;
+				}
 			</style>
 	</head>
 <body>
@@ -107,12 +127,15 @@
             <div class="col-md-3">
                 <div class="sidebar">
                 	<h3 class="well well-sm">Notre objectif</h3>
-         		<p>Vous aider a trouver un sens a votre vie a travers les enseignements biblique. "Et vous connaîtrez la vérité, et la vérité vous rendra libres. Jean 8:32"</p>
-         		<h3 class="well well-sm">À propos </h3>
-	                <ul>
-	                    <li>“Retourne dans ta maison, et raconte tout ce que Dieu t’a fait. Il s’en alla, et publia par toute la ville tout ce que Jésus avait fait pour lui.” Luc‬ ‭8:39‬</li>
-	                    <li>“Jésus ne le lui permit pas, mais il lui dit: Va dans ta maison, vers les tiens, et raconte-leur tout ce que le Seigneur t’a fait, et comment il a eu pitié de toi.”Marc‬ ‭5:19‬ </li>
-	                </ul>
+					<blockquote>"Répandre la bonne nouvelle de Jésus Christ. 
+							Il est  le chemin, la vérité, et la vie. 
+ 							"il guérit - il sauve - il délivre. "</blockquote>
+         			<p>Vous aider a trouver un sens a votre vie a travers les enseignements biblique. "Et vous connaîtrez la vérité, et la vérité vous rendra libres. Jean 8:32"</p>
+         			<h3 class="well well-sm">À propos </h3>
+		                <ul>
+		                    <li>“Retourne dans ta maison, et raconte tout ce que Dieu t’a fait. Il s’en alla, et publia par toute la ville tout ce que Jésus avait fait pour lui.” Luc‬ ‭8:39‬</li>
+		                    <li>“Jésus ne le lui permit pas, mais il lui dit: Va dans ta maison, vers les tiens, et raconte-leur tout ce que le Seigneur t’a fait, et comment il a eu pitié de toi.”Marc‬ ‭5:19‬ </li>
+		                </ul>
             	<p>Par la présente, nous voulons témoigner la grandeur de Dieu tout puissant, le Dieu d’Israël. Pour tout les merveilles qu'il a accomplir dans nôtre vie. Nous voulons témoigner que la vie c'est Christ.<br>Nous voulons témoigner Christ et non la promotion d'un individu ou organisme. Si vous avez un message (chant, témoignage, enseignement, prédication) qui cadre avec notre objectif nous aimerions bien le diffuser. </p>
 
         		<h3 class="well well-sm">Notre mission </h3>
